# dromedary

./: .gitignore  Makefile  NOTICE  README.md  capability.py  executor.py  interpreter.py  models.py  p_llm_agent.py  policies.py  policy_engine.py  prompt_builder.py  provenance.py  pyproject.toml  pytest.ini  run_interpreter_standalone.py  run_tests.py  test_visualizer.py  tools.py  visualizer.py
.github/workflows/: ci.yml
design/: capabilities.md  ifc.md
dromedary_mcp/: __init__.py  client.py  tool_loader.py  tool_mapper.py  types.py
examples/: prompt1.md  prompt1.txt  prompt2.md  prompt2.txt  prompt3.md  prompt3.txt  prompt4.md  prompt4.txt  prompt5.md  prompt5.txt
mcp/: client.py
mcp_servers/: __init__.py  mcp-servers-config.json  models.py
mcp_servers/calendar/: calendar_server.py  pyproject.toml
mcp_servers/email/: email_server.py  pyproject.toml
mcp_servers/filestore/: filestore_server.py  pyproject.toml
policies/: README.md  calendar_policy.rego  email_policy.rego  file_policy.rego  policies.yaml
scripts/: run_interpreter.py  run_tests.sh  test_visualizer.py
src/dromedary/: __init__.py  agent.py  capability.py  executor.py  interpreter.py  models.py  prompt_builder.py  provenance.py  provenance_graph.py  tools.py
src/dromedary/mcp/: README.md  __init__.py  client.py  manager.py  tool_loader.py  tool_mapper.py  types.py
src/dromedary/policy/: __init__.py  engine.py  (+1 more)
tests/: __init__.py  conftest.py  test_capability.py  test_end_to_end_integration.py  test_integration.py  test_interpreter.py  test_interpreter_integration.py  test_mcp_client.py  test_mcp_servers.py  test_mcp_types.py  test_policies.py  test_policy_violation_integration.py  test_provenance_graph.py  test_tools.py
tests/mcp/: __init__.py  test_client.py  test_servers.py  test_types.py
tests/testdata/: test1.py  test2.py
(+2 files in other folders)
