[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dromedary"
version = "0.1.0"
description = "Dromedary is a one-humped Camel. It is my replication of the CaMeL system from a Google DeepMind"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0.0",
    "rich>=14.0.0",
    "mcp[cli]>=1.9.4",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
dromedary-agent = "dromedary.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dromedary"]
